project2/test/test_SID_16.out
Error type 3 at Line 10: redefine variable: c
