project2/test/test_SID_16.spl
int main(){
int a,b;
    while(0) {
        if(a) {
            int c = 1;
        } else if (b) {
            int d = a;
        }
        else {
            float c = 1.1;
        }
    }
    return 0;
}